# src/api/dto/index.ts
@@ -7,10 +7,10 @@
  * OpenAPI spec version: 1.1.0
  */
 
-export * from './authUser';
 export * from './badRequestResponse';
 export * from './conflictResponse';
 export * from './createdId';
+export * from './errorDetails';
 export * from './forbiddenResponse';
 export * from './getInvoicesParams';
 export * from './getUsersParams';
@@ -28,9 +28,6 @@ export * from './paginatedInvoices';
 export * from './paginatedUserTaxProfiles';
 export * from './paginatedUsers';
 export * from './paymentMethod';
-export * from './problemDetails';
-export * from './refreshRequest';
-export * from './registerRequest';
 export * from './sortParameter';
 export * from './taxProfileBase';
 export * from './taxType';
